# foxim_reporting

./: LICENSE  README.md
FoximReport/: pyproject.toml
FoximReport/foximreport/: app.py
FoximReport/foximreport/api/: db.py
FoximReport/tests/: test_get_sales_report.py
FoxiomReport/: Dockerfile  pyproject.toml
FoxiomReport/foxiomreport/: app.py
FoxiomReport/tests/: test_get_sales_report.py
