[tool.poetry]
name = "foximreport"
version = "0.1.0"
description = ""
authors = ["Akhil  <akhil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
environs = "^9.5.0"
flask-restful = "^0.3.10"
blueprint = "^3.4.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
