[tool.poetry]
name = "foximreport"
version = "0.1.0"
description = ""
authors = ["Akhil  <akhil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pyodbc = "^4.0.35"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
